feat: add productDetail

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Craftsy | Home</title>
+    <title>Craftsy | <%= title %></title>
     <!-- swipper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- bootstrap -->
