--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,143 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<%- include('./partials/head') %>
+<%- include('./partials/head',{
+    title : 'Home'
+}) %>
 
-<body class="home">
-    <%- include('./partials/header') %>
+    <body class="home">
+        <%- include('./partials/header') %>
 
-    <main class="home__main">
-        <!-- Slider main container -->
-        <div class="swiper mySwiper_1">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide swiper-slide_1">
-                    <img src="/images/banner/banner_1.jpg" alt="">
+            <main class="home__main">
+                <!-- Slider main container -->
+                <div class="swiper mySwiper_1">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <% banner.forEach(imagen => { %>
+                            <div class="swiper-slide swiper-slide_1">
+                                <img src="/images/banner/<%= imagen %>" alt="">
+                            </div>
+                        <% }) %>
+                    </div>
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev swiper-button-prev_1"></div>
+                    <div class="swiper-button-next swiper-button-next_1"></div>
+
+                    <!-- If we need scrollbar -->
+                    <div class="swiper-scrollbar"></div>
                 </div>
-                <div class="swiper-slide swiper-slide_1">
-                    <img src="/images/banner/banner_2.jpg" alt="">
-                </div>
-                <div class="swiper-slide swiper-slide_1">
-                    <img src="/images/banner/banner_3.png" alt="">
-                </div>
-                ...
-            </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
 
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev swiper-button-prev_1"></div>
-            <div class="swiper-button-next swiper-button-next_1"></div>
+                <section class="home__main__section">
 
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
-        </div>
+                    <% productos.forEach(({id, imagen, nombre, descripcion})=> { %>
+                     <%- include('./partials/cardProduct',{
+                        id,
+                        imagen,
+                        nombre,
+                        descripcion
+                     }) %>
+                    <% }) %>
 
-        <section class="home__main__section">
+                </section>
+                <aside class="home__main__aside">
+                    <h2>Tutoriales</h2>
+                    <section class="home__main__aside__section--tutoriales">
 
-            <% productos.forEach(({id, imagen, nombre, descripcion}) => { %>
-                <article class="home__main__section__article">
-                <img src="/images/<%= imagen %>" alt="img-phone-01">
-                <h4><%= nombre %></h4>
-                <p><%= descripcion %></p>
-                <a class="button button__primary" href="/productos/<%= id %>">ver mas</a>
-            </article>
-            <% }) %>
-            
-         
-          
-        </section>
-        <aside class="home__main__aside">
-            <h2>Tutoriales</h2>
-            <section class="home__main__aside__section--tutoriales">
+                        <% tutoriales.forEach(({ nombre, imagen})=> { %>
+                          <%- include('./partials/cardTutorial', {
+                            nombre,
+                            imagen
+                          }) %>
+                        <% }) %>
 
-                <% tutoriales.forEach(({ nombre, imagen}) => { %>
-                    <article class="home__main__aside__section__article">
-                        <img src="/images/<%= imagen %>" alt="aside-01">
-                        <p><%= nombre %></p>
-                    </article>
-                <% }) %>
 
-              
-            </section>
-            <h2>Publicidad</h2>
-            <section class="home__main__aside__section--publicidad">
-                <img src="/images/ad-01.jpg" alt="ad-01">
-                <img src="/images/ad-02.jpg" alt="ad-02">
-            </section>
-        </aside>
-        <div class="home__main__section-sales">
-            <div class="swiper_2 mySwiper_2">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
-                    </div>
-                    <div class="swiper-slide swiper-slide_2">
-                        <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                    </section>
+                    <h2>Publicidad</h2>
+                    <section class="home__main__aside__section--publicidad">
+                        <img src="/images/ad-01.jpg" alt="ad-01">
+                        <img src="/images/ad-02.jpg" alt="ad-02">
+                    </section>
+                </aside>
+                <div class="home__main__section-sales">
+                    <div class="swiper_2 mySwiper_2">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-1.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-2.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-3.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-4.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-5.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-6.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-7.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-8.jpg" />
+                            </div>
+                            <div class="swiper-slide swiper-slide_2">
+                                <img src="https://swiperjs.com/demos/images/nature-9.jpg" />
+                            </div>
+                        </div>
+                        <div class="swiper-pagination swiper-pagination_2"></div>
                     </div>
                 </div>
-                <div class="swiper-pagination swiper-pagination_2"></div>
-            </div>
-        </div>
-    </main>
-    <%- include('./partials/scripts') %>
-    <script>
-        const swiper_1 = new Swiper('.mySwiper_1', {
+            </main>
+            <%- include('./partials/scripts') %>
+                <script>
+                    const swiper_1 = new Swiper('.mySwiper_1', {
 
-            // If we need pagination
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
+                        // If we need pagination
+                        pagination: {
+                            el: '.swiper-pagination',
+                            clickable: true,
+                        },
 
-            // Navigation arrows
-            navigation: {
-                nextEl: '.swiper-button-next_1',
-                prevEl: '.swiper-button-prev_1',
-            },
+                        // Navigation arrows
+                        navigation: {
+                            nextEl: '.swiper-button-next_1',
+                            prevEl: '.swiper-button-prev_1',
+                        },
 
-        });
+                    });
 
-        const swiper_2 = new Swiper(".mySwiper_2", {
-            effect: "coverflow",
-            grabCursor: true,
-            centeredSlides: true,
-            slidesPerView: "auto",
-            coverflowEffect: {
-                rotate: 50,
-                stretch: 0,
-                depth: 100,
-                modifier: 1,
-                slideShadows: true,
-            },
-            pagination: {
-                el: ".swiper-pagination_2",
-            },
-        });
+                    const swiper_2 = new Swiper(".mySwiper_2", {
+                        effect: "coverflow",
+                        grabCursor: true,
+                        centeredSlides: true,
+                        slidesPerView: "auto",
+                        coverflowEffect: {
+                            rotate: 50,
+                            stretch: 0,
+                            depth: 100,
+                            modifier: 1,
+                            slideShadows: true,
+                        },
+                        pagination: {
+                            el: ".swiper-pagination_2",
+                        },
+                    });
 
-    </script>
-</body>
+                </script>
+    </body>
 
 </html>
